--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools"
-  android:layout_width="match_parent"
-  android:layout_height="match_parent"
-  tools:context=".MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".MainActivity"
+    >
 
-  <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Hello World!"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintTop_toTopOf="parent" />
+  <com.example.dbarone.templateapp.NavigationView
+      android:id="@+id/navigationView"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      app:backButtonVisibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+
+      app:layout_constraintVertical_bias="0.0"
+      app:paneDisplayMode="LeftMinimal"
+      >
+
+    <ImageButton
+        android:id="@+id/backButton"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_margin="0dp"
+        android:background="@android:color/transparent"
+        android:foregroundTint="#000000"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_arrow_back_24px"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintHorizontal_bias=".0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <ImageButton
+        android:id="@+id/menuButton"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:background="@android:color/transparent"
+        android:foregroundTint="#000000"
+        android:paddingLeft="12dp"
+        android:paddingRight="12dp"
+        android:scaleType="fitCenter"
+        android:src="@drawable/ic_menu_24px"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintDimensionRatio="1:1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/backButton"
+        app:layout_constraintVertical_bias="0.0"
+        />
+
+  </com.example.dbarone.templateapp.NavigationView>
+
+  <android.support.constraint.ConstraintLayout
+      android:id="@+id/contentView"
+      android:layout_width="0dp"
+      android:layout_height="match_parent"
+      app:layout_constraintLeft_toRightOf="@id/navigationView"
+      app:layout_constraintRight_toRightOf="parent"
+      >
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+
+  </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
