Cleanup for NavigationView.

--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -19,9 +19,10 @@
   <!-- declare our custom widget to be styleable by these attributes -->
   <declare-styleable name="NavigationView_Layout">
     <attr name="paneDisplayMode" />
-    <attr name="backButtonVisibility" />
     <attr name="compactModeThresholdWidth" format="integer" />
     <attr name="expandedModeThresholdWidth" format="integer" />
+    <attr name="compactModeWidth" format="integer" />
+    <attr name="expandedModeWidth" format="integer" />
   </declare-styleable>
 
 </resources>
