--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
@@ -7,7 +7,7 @@
         tools:context=".MainActivity"
         >
 
-    <android.support.constraint.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/contentView"
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -21,9 +21,9 @@
                 android:layout_height="wrap_content"
                 />
 
-    </android.support.constraint.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.example.dbarone.templateapp.NavigationView
+    <com.dfbarone.android.navigationview.widget.NavigationView
             android:id="@+id/navigationView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -31,6 +31,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
+            android:background="@color/colorAccent"
             app:paneDisplayMode="Auto"
             >
 
@@ -51,7 +52,7 @@
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 />
-
+<!--
         <ImageButton
                 android:id="@+id/menuButton"
                 android:layout_width="56dp"
@@ -69,7 +70,7 @@
                 app:layout_constraintTop_toBottomOf="@id/backButton"
                 app:layout_constraintVertical_bias="0.0"
                 />
+-->
+    </com.dfbarone.android.navigationview.widget.NavigationView>
 
-    </com.example.dbarone.templateapp.NavigationView>
-
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
