--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,11 +27,11 @@
             android:id="@+id/navigationView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+        app:compactModeWidth="?android:attr/actionBarSize"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0"
-            android:background="@color/colorAccent"
             app:paneDisplayMode="Auto"
             >
 
